Fix bottom alignment issue on hands and make intro text regular font weight with bold headings

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,13 +43,14 @@ body {
 .welcome-rules {
     margin: 20px auto 10px;
     padding: 22px 15px;
-    font-weight: bold;
+    /*font-weight: bold;*/
     width: 210px;
     background-color: #F6FFA9;
 }
 
 #welcome-header {
     font-size: 1.4rem;
+    font-weight: bold;
     padding-bottom: 2px;
     margin: 0 auto;
 }
@@ -61,6 +62,7 @@ body {
 
 #rules-header {
     font-size: 1.3rem;
+    font-weight: bold;
     padding-bottom: 2px;
     padding-top: 15px;
     margin: 0 auto;
@@ -137,8 +139,9 @@ body {
 
 #user-hand-inner {
     height: 90px;
-    display: inline-block;
-    vertical-align: bottom;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
 }
 
 #computer-hand-outer {
@@ -148,8 +151,9 @@ body {
 
 #computer-hand-inner {
     height: 90px;
-    display: inline-block;
-    vertical-align: bottom;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
 }
 
 .controls {
@@ -324,13 +328,13 @@ footer {
 
     .hand-header {
         font-size: 1.2rem;
-        margin-block-end: 0.6em;
+        margin-block-end: 0.2em;
     }
 
     #controls-header {
         font-size: 1.30rem;
         margin-block-end: 0.5em;
-        padding-top: 10px;
+        padding-top: 20px;
     }
 
     /* Responsive styling score area */
